tests/invalid/print_function_value/main.py
def f(x: int) -> int:
    return x


def main() -> None:
    print(f)
